--- a/examples/ExampleBase/app/src/main/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.8"
+            android:gravity="bottom"
+            android:scrollbars="vertical"
             android:text="Hello, my friend!\n" />
 
         <Button
