--- a/demo/ACLogger/app/src/main/res/xml/file_paths.xml
+++ b/demo/ACLogger/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+    <files-path
+        name="app-files"
+        path="/" />
+    <external-path
+        name="external-files"
+        path="/" />
     <external-cache-path
         name="external-cache-files"
         path="/" />
