--- a/examples/ExpandableListView/app/src/main/res/layout/activity_main.xml
+++ b/examples/ExpandableListView/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
+        android:layout_marginStart="8dp"
         android:text="Hello World!" />
 
 </LinearLayout>
