--- a/examples/ExpandableListView/app/src/main/res/layout/list_child.xml
+++ b/examples/ExpandableListView/app/src/main/res/layout/list_child.xml
@@ -7,7 +7,7 @@
     <CheckBox
         android:id="@+id/cb_child"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tv_child"
