--- a/examples/ExampleBase/app/src/main/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             android:id="@+id/tv_status"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.8"
+            android:layout_weight="8"
             android:gravity="bottom"
             android:scrollbars="vertical"
             android:text="Hello, my friend!\n" />
@@ -25,15 +24,16 @@
             android:id="@+id/btn_run"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1"
+            android:layout_weight="1"
             android:text="Run" />
 
         <Button
             android:id="@+id/btn_reset"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1"
+            android:layout_weight="1"
             android:text="Reset" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
