--- a/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="text"
-            android:hint="Input text..."/>
+            android:hint="Input text..."
+            android:importantForAutofill="no" />
     </LinearLayout>
 
     <LinearLayout
