feat: Change the view color

--- a/demo/TouchBlocker/app/src/main/res/layout/overlay_layout.xml
+++ b/demo/TouchBlocker/app/src/main/res/layout/overlay_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/v_blocker_upper"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#80000000"
+        android:background="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,7 +19,7 @@
         android:id="@+id/v_blocker_lower"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#80000000"
+        android:background="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
