feat: Apply line-spacing to the status text view

--- a/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_weight="8"
             android:gravity="bottom"
             android:scrollbars="vertical"
+            android:lineSpacingExtra="4dp"
             android:text="Hello, my friend!\n" />
 
         <Button
