--- a/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_weight="7"
         android:gravity="bottom"
         android:scrollbars="vertical"
+        android:lineSpacingExtra="4dp"
         android:text="Hello, my friend!\n" />
 
     <LinearLayout
