--- a/examples/SettingsActivity/app/src/main/res/menu/menu_main.xml
+++ b/examples/SettingsActivity/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/settings_24px"
         android:title="@string/settings"
         app:showAsAction="always"
         android:orderInCategory="1"/>
