--- a/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:gravity="bottom"
             android:scrollbars="vertical"
             android:lineSpacingExtra="4dp"
+            android:paddingHorizontal="2dp"
             android:text="Hello, my friend!\n" />
 
         <Button
