--- a/examples/ExampleBase/app/src/Btn4/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn4/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:gravity="bottom"
         android:scrollbars="vertical"
         android:lineSpacingExtra="4dp"
+        android:paddingHorizontal="2dp"
         android:text="Hello, my friend!\n" />
 
     <LinearLayout
