--- a/examples/ExampleBase/app/src/Btn4/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn4/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,18 +13,25 @@
         android:id="@+id/tv_status"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
         android:gravity="bottom"
         android:scrollbars="vertical"
         android:lineSpacingExtra="4dp"
         android:paddingHorizontal="2dp"
-        android:text="Hello, my friend!\n" />
+        android:text="Hello, my friend!\n"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_line_1" />
 
     <LinearLayout
+        android:id="@+id/btn_line_1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_line_2"
+        app:layout_constraintHeight_percent="0.1">
 
         <Button
             android:id="@+id/btn_start"
@@ -41,10 +49,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btn_line_2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.1">
 
         <Button
             android:id="@+id/btn_run"
@@ -61,4 +73,4 @@
             android:text="Reset" />
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
