--- a/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn2/res/layout/activity_main.xml
@@ -23,9 +23,11 @@
         app:layout_constraintBottom_toTopOf="@id/btn_run" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button"
         android:id="@+id/btn_run"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="2dp"
         android:text="Run"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,9 +35,11 @@
         app:layout_constraintHeight_percent="0.1" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button"
         android:id="@+id/btn_reset"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="2dp"
         android:text="Reset"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
