--- a/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/Btn4Et1/res/layout/activity_main.xml
@@ -41,23 +41,28 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_line_2"
         app:layout_constraintHeight_percent="0.1">
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/btn_setup"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_marginHorizontal="1dp"
             android:text="Setup" />
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/btn_func"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_marginHorizontal="1dp"
             android:text="Func" />
     </LinearLayout>
 
@@ -67,23 +72,28 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.1">
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/btn_run"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_marginHorizontal="1dp"
             android:text="Run" />
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/btn_reset"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_marginHorizontal="1dp"
             android:text="Reset" />
     </LinearLayout>
 
