--- a/examples/ExampleBase/app/src/main/res/values/themes.xml
+++ b/examples/ExampleBase/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.ExampleBase" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="31">@drawable/img_example</item>
         <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="31">@integer/material_motion_duration_long_1</item>
     </style>
