--- a/examples/ExampleBase/app/src/IconBtn8/res/layout/activity_main.xml
+++ b/examples/ExampleBase/app/src/IconBtn8/res/layout/activity_main.xml
@@ -93,4 +93,18 @@
             android:text="Test" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/iv_frame"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="24dp"
+        android:scaleType="fitCenter"
+        android:importantForAccessibility="no"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHeight_percent="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
